Update build.gradle
Co-authored-by: Werner Dietl <wdietl@gmail.com>