@@ -16,9 +16,7 @@ ext {
     afu = "${jsr308}/annotation-tools/annotation-file-utilities"
     picoPath = "${jsr308}/immutability"
     compilerArgsForRunningPICO = [
-            // These are required in Java 16+ because the --illegal-access option is set to deny
-            // by default.  None of these packages are accessed via reflection, so the module
-            // only needs to be exported, but not opened.
+            // Keep in sync with checker-framework/build.gradle.
             "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
